--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,7 @@
 # Site
 title: Cyberinfrastructure
 subtitle: for Researchers & Teams
+email: cyberhelp@sesync.org
 copyright: |
   &copy; National Socio-Environmental Synthesis Center (SESYNC)<br>
   1 Park Place, Suite 300, Annapolis, MD 21401
