--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ exclude:
   - Gemfile.lock
   - Gemfile
   - "*.Rproj*"
+  - "*.Rmd"
 theme: jekyll-theme-leap-day
 sass:
   sass_dir: ./assets/css
