edit authors file with name field, add excerpt break to some posts as a test

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,44 +1,53 @@
 qdread:
+  name: Quentin Read
   full_name: Quentin Read
   github: qdread
   site: http://quentinread.com/
 
 qread:
+  name: Quentin Read
   full_name: Quentin Read
   github: qdread
   site: http://quentinread.com/
 
 khondula:
+  name: Kelly Hondula
   full_name: Kelly Hondula
   github: khondula
   site: https://khondula.github.io/
 
 itcarroll:
+  name: Ian Carroll
   full_name: Ian Carroll
   github: itcarroll
   site: https://itcarroll.github.io/
 
 rblake:  
+  name: Rachael Blake
   full_name: Rachael Blake
   github: reblake
   site: http://www.rachaeleblake.com/
   
 reblake:  
+  name: Rachael Blake
   full_name: Rachael Blake
   github: reblake
   site: http://www.rachaeleblake.com/
 
 bparment1:  
+  name: Benoit Parmentier
   full_name: Benoit Parmentier
   github: bparment1
   site: https://www.benoitparmentier.org/
 
 BillSchenk:  
+  name: Bill Schenk
   full_name: Bill Schenk
   github: BillSchenk
   site: https://www.linkedin.com/in/bill-schenk/
 
 rmason:  
+  name: Rachel Mason
   full_name: Rachel Mason
   github: rachelemason
   site: https://www.sesync.org/users/rmason
