Post on data challenge added to drafts also update authors YAML and commit image

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -52,3 +52,13 @@ rmason:
   github: rachelemason
   site: https://www.sesync.org/users/rmason
   
+AllieCahanin:
+  name: Allie Cahanin
+  full_name: Allie Cahanin
+  site: https://www.linkedin.com/in/cahanin/
+
+KatieToren:
+  name: Katie Toren
+  full_name: Katie Toren
+  site: https://www.linkedin.com/in/katieradketoren/  
+  
