Publish dc21 blog post and correct authors.yml

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -55,10 +55,12 @@ rmason:
 AllieCahanin:
   name: Allie Cahanin
   full_name: Allie Cahanin
+  github: NA
   site: https://www.linkedin.com/in/cahanin/
 
 KatieToren:
   name: Katie Toren
   full_name: Katie Toren
+  github: NA
   site: https://www.linkedin.com/in/katieradketoren/  
   
